--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ body {
       <div class="decoration decoration-top-left">🕸</div>
       <div class="decoration decoration-bottom-right">🕷️</div>
       <img src="spidey.png" alt="My Melody" class="melody-character">
-      <h1>Happy 26th Birthday!</h1>
+      <h1>Happy Birthday!</h1>
       <div class="hearts" id="hearts1"></div>
       <button class="btn" onclick="showPage('page2')">Continue</button>
     </div>
@@ -340,30 +340,21 @@ body {
       <div class="decoration decoration-bottom-right">🕷️</div>
       <img src="pict.jpg" alt="Girlfriend's Photo" class="girlfriend-photo">
       <div class="message-text">
-        <p>hi, happy 26th birthday, Moon.
+        <p>hi, happy birthday.
           
 i know things haven’t been easy between us lately, and i’m really sorry if i ever made you feel sad or overthink. that was never what i wanted. you deserve to feel safe and loved, especially on your special day.
 
-you always doubt yourself, padahal kamu one of the coolest, most genuine people i know. kamu suka mikir kamu ga cukup, suka overthink hal-hal kecil, but the truth is: you shine in ways you don’t even realize. and i see all of it. every little thing, Moon.
-
-that’s why i call you spidermoon. not just because you love Spiderman, but because you have this quiet strength in you hehe the kind that stays gentle even when life gets rough. you fall, you get back up, and you still choose to be kind. that’s your superpower!!
+you always doubt yourself, padahal kamu one of the coolest, most genuine people i know. kamu suka mikir kamu ga cukup, suka overthink hal-hal kecil, but the truth is: you shine in ways you don’t even realize. and i see all of it. every little thing, sayang.
 
 and since today’s your day, i just want you to feel appreciated. i want you to feel loved without needing to perform or pretend. just you, exactly as you are anak manis<3
 
-i hope this year i get to stand beside you more, in your good days, your messy days, and all the days you’re still figuring yourself out.
-i hope we get to watch Rex Orange County together, nyanyi lagu-lagunya rex sampe suara kita abis terus besoknya harus kerja dengan suara serak HAHAHA.
+i hope this year i get to stand beside you more, in your good days, your messy days, and all the days you’re still figuring yourself out. and not just that, i wanna go to a LANY concert with you, the type of night where city lights feel softer and everything feels a little more possible. 
 
-and not just that, i wanna go to a LANY concert with you, the type of night where city lights feel softer and everything feels a little more possible. and let’s watch Tulus too, biar kamu bisa senyum kecil setiap denger liriknya, and i get to look at you instead of the stage.
+i just wanna be there for the things that make you happy. mau kamu kaya gimanapun i still care about you the same. i still choose you the same. i love you in all your versions, even the ones you’re still learning to love yourself.
 
-i just wanna be there for the things that make you happy.
+so, happy birthday, my spiderman. i hope this year is softer, kinder, and gentler to you. i hope it gives you all the good things you’ve quietly wished for.
 
-moon, mau kamu kaya gimanapun i still care about you the same. i still choose you the same. i love you in all your versions, even the ones you’re still learning to love yourself.
-
-so, happy wonderful 26th, my spidermoon. i hope this year is softer, kinder, and gentler to you. i hope it gives you all the good things you’ve quietly wished for.
-
-thank you for being here.
-
-and thank you for letting me love you the way i do.    </p></div>
+thank you for being here. and thank you for letting me love you the way i do.    </p></div>
       <div class="hearts" id="hearts5"></div>
     </div>
   </div>
@@ -461,6 +452,7 @@ and thank you for letting me love you the way i do.    </p></div>
 </body>
 
 </html>
+
 
 
 
